--- a/index.html
+++ b/index.html
@@ -8,17 +8,39 @@
 
     <script>
         async function getSynonyms(){
-            let url = 'https://www.openthesaurus.de/synonyme/search?q=test&format=application/json';
+            let query = document.getElementById('searchQuery').value;
+            let url = `https://www.openthesaurus.de/synonyme/search?q=${query}&format=application/json`;
             let response = await fetch(url);
             let responseAsJson = await response.json();
-            console.log('response is', responseAsJson);
+            let synsets = responseAsJson['synsets'];
+
+            renderSynsets(synsets);
         }
 
+        function renderSynsets(synsets) {
+            let container = document.getElementById('container');
+
+            container.innerHTML = `<div>Es wurden <b>${synsets.length}</b> Synonym-Sets geladen!</div>`;
+
+            for (let i = 0; i < synsets.length; i++) {
+                const synset = synsets[i]; 
+                let terms = synset['terms'];
+                container.innerHTML += `<h2>Synonym-Set mit ID ${synset['id']}</h2>`
+
+                for (let j = 0; j < terms.length; j++) {
+                    const term = terms[j];
+                    container.innerHTML += `<div>${term['term']}</div>`
+                }
+            }
+        }
     </script>
 </head>
 <body>
+    <input type='text' id="searchQuery">
 
     <button onclick="getSynonyms()">Get Synonyms</button>
+
+    <div id="container"></div>
     
 </body>
 </html>
